; ModuleID = '/home/carl/AnghaBench/libgit2/tests/stash/extr_save.c_test_stash_save__untracked_skips_ignored.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/stash/extr_save.c_test_stash_save__untracked_skips_ignored.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"stash/.gitignore\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"bundle/vendor/\0A\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"stash/bundle\00", align 1
@.str.3 = private unnamed_addr constant [20 x i8] c"stash/bundle/vendor\00", align 1
@.str.4 = private unnamed_addr constant [25 x i8] c"stash/bundle/vendor/blah\00", align 1
@.str.5 = private unnamed_addr constant [10 x i8] c"contents\0A\00", align 1
@.str.6 = private unnamed_addr constant [11 x i8] c"stash/when\00", align 1
@.str.7 = private unnamed_addr constant [18 x i8] c"stash/just.ignore\00", align 1
@stash_tip_oid = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@signature = common dso_local global i32 0, align 4
@GIT_STASH_INCLUDE_UNTRACKED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_stash_save__untracked_skips_ignored() #0 {
  %1 = call i32 @cl_git_append2file(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %2 = call i32 @p_mkdir(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 511)
  %3 = call i32 @cl_must_pass(i32 %2)
  %4 = call i32 @p_mkdir(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0), i32 511)
  %5 = call i32 @cl_must_pass(i32 %4)
  %6 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.5, i64 0, i64 0))
  %7 = call i32 @git_path_exists(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.6, i64 0, i64 0))
  %8 = call i32 @cl_assert(i32 %7)
  %9 = call i32 @git_path_exists(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.7, i64 0, i64 0))
  %10 = call i32 @cl_assert(i32 %9)
  %11 = call i32 @git_path_exists(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.4, i64 0, i64 0))
  %12 = call i32 @cl_assert(i32 %11)
  %13 = load i32, i32* @repo, align 4
  %14 = load i32, i32* @signature, align 4
  %15 = load i32, i32* @GIT_STASH_INCLUDE_UNTRACKED, align 4
  %16 = call i32 @git_stash_save(i32* @stash_tip_oid, i32 %13, i32 %14, i32* null, i32 %15)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = call i32 @git_path_exists(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.6, i64 0, i64 0))
  %19 = icmp ne i32 %18, 0
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  %22 = call i32 @cl_assert(i32 %21)
  %23 = call i32 @git_path_exists(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.4, i64 0, i64 0))
  %24 = call i32 @cl_assert(i32 %23)
  %25 = call i32 @git_path_exists(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.7, i64 0, i64 0))
  %26 = call i32 @cl_assert(i32 %25)
  ret void
}

declare dso_local i32 @cl_git_append2file(i8*, i8*) #1

declare dso_local i32 @cl_must_pass(i32) #1

declare dso_local i32 @p_mkdir(i8*, i32) #1

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_path_exists(i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_stash_save(i32*, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
